Updated thesis by notes and todo

--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -130,8 +130,9 @@
 }
 
 \lstdefinelanguage{csharp}{
-	keywords={String, Properties, CultureInfo, Thread, Environment, Directory, StanfordCoreNLP, Annotation},
-	ndkeywords={new},
+	keywords={String, Properties, CultureInfo, Thread, Environment, Directory, StanfordCoreNLP, Annotation, Note, NotenizerSentence, NotenizerRule,
+		NotePart, NotenizerDependency},
+	ndkeywords={new, private, foreach, return},
 	keywordstyle=\color{keywordsCSharpColor}\normalfont,
 	ndkeywordstyle=\color{ndkeywordsCSharpColor}\normalfont,
 	commentstyle=\color{commentCSharpColor}\ttfamily,
