--- a/Doc/Bachelor Thesis/references.bib
+++ b/Doc/Bachelor Thesis/references.bib
@@ -7,12 +7,6 @@
 	pages = {2493--2537}
 }
 
-@article{Copestake2004,
-	author = {Ann Copestake},
-	title = {Natural Language Processing},
-	year = {2004}
-}
-
 @book{Bharati1995,
 	author = {Bharati, Akshar and Chaitanya, Vineet},
 	title = {Natural language processing: A Paninian perspective},
@@ -70,20 +64,6 @@
 	month={June},
 }
 
-@online{MongoDBvsMySQLCompared,
-	author = {MongoDB, Inc},
-	title = {MongoDB and MySQL Compared}},
-	date = {2015},
-	url = {https://www.mongodb.com/compare/mongodb-mysql},
-}
-
-@online{WordNetPage,
-	author = {Christiane Fellbaum, Randee Tengi},
-	title = {What is WordNet?},
-	date = {2015},
-	url = {https://wordnet.princeton.edu/},
-}
-
 @book{Maier,
 	author    = {David Maier},
 	title     = {The Theory of Relational Databases},
@@ -92,3 +72,16 @@
 	isbn      = {0-914894-42-0},
 	bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@incollection{AllenNLP,
+	author = {Allen, James F.},
+	title = {Natural Language Processing},
+	booktitle = {Encyclopedia of Computer Science},
+	isbn = {0-470-86412-5},
+	pages = {1218--1222},
+	numpages = {5},
+	url = {http://dl.acm.org/citation.cfm?id=1074100.1074630},
+	acmid = {1074630},
+	publisher = {John Wiley and Sons Ltd.},
+	address = {Chichester, UK},
+} 
