--- a/Doc/Bachelor Thesis/main.tex
+++ b/Doc/Bachelor Thesis/main.tex
@@ -124,9 +124,14 @@ pdfkeywords={key words},%
 \input{introduction.tex}
 
 %%
-%% analysis
+%% analysis part 1
 %%
 \input{analysis.tex}
+
+%%
+%% analysis part 1
+%%
+\input{analysis_part2.tex}
 
 %%
 %% design
